[package]
name = "async-redis-session"
version = "0.2.3"
authors = ["Jacob Rothstein <hi@jbr.me>", "0xAlcibiades <alcibiades@valorem.xyz>"]
edition = "2021"
description = "redis session store for async-session"
readme = "README.md"
repository = "https://github.com/jbr/async-redis-session"
documentation = "https://docs.rs/async-redis-session"
license = "MIT OR Apache-2.0"
keywords = ["sessions", "axum", "async-session", "redis"]
categories = ["web-programming::http-server", "web-programming", "database"]

[dependencies]
async-session = "3.0.0"
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
ulid = "1.0.0"
tokio = { version = "1.22", features = ["full"] }
tokio-test = "0.4.2"
